--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,6 +2,8 @@ name: tg-reminder-bot
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "*/5 * * * *"
 
 jobs:
   run:
@@ -16,49 +18,18 @@ jobs:
       - run: pip install -r requirements.txt
 
       - name: Run python runner.py
-        shell: bash
-        env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TZ: ${{ secrets.TZ }}
-        run: |
-          echo "ENV_KEYS:"
-          env | sort | sed -n '1,60p'
-          python -u runner.py
-
-
-
-name: tg-reminder-bot
-
-on:
-  schedule:
-    - cron: "*/5 * * * *"
-  workflow_dispatch:
-
-jobs:
-  run:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-      - run: pip install -r requirements.txt
-      - run: python runner.py
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TZ: ${{ secrets.TZ }}
 
-          # источник (группа + тема)
           SOURCE_CHAT_ID: ${{ secrets.SOURCE_CHAT_ID }}
           SOURCE_THREAD_ID: ${{ secrets.SOURCE_THREAD_ID }}
 
-          # хранилище состояния
           STATE_CHAT_ID: ${{ secrets.STATE_CHAT_ID }}
           STATE_THREAD_ID: ${{ secrets.STATE_THREAD_ID }}
 
-          # два получателя (только эти двое)
           USER1_CHAT_ID: ${{ secrets.USER1_CHAT_ID }}
           USER2_CHAT_ID: ${{ secrets.USER2_CHAT_ID }}
 
-          # заголовки в тексте, которые переключают "список 1/2" (лежит только в Secrets)
           PEOPLE_MARKERS_JSON: ${{ secrets.PEOPLE_MARKERS_JSON }}
+        run: python -u runner.py
